--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ ipython-genutils==0.2.0
 jedi==0.17.1
 kiwisolver==1.2.0
 lockfile==0.12.2
+lxml==4.6.3
 matplotlib==3.2.2
 msgpack==0.6.2
 multitasking==0.0.9
