--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,9 @@ dependencies = [
     "yfinance",
 ]
 
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["timba", "timba.src", "timba.scraping"]
