--- a/.pylintrc
+++ b/.pylintrc
@@ -1,4 +1,4 @@
 [BASIC]
 
 # Good variable names which should always be accepted, separated by a comma.
-good-names=e, i, j, k, df, f
+good-names=e, i, j, k, df, f, x, y
